# uvcombine

./: .gitignore  MANIFEST.in  README.md  README.rst  instrument_info.md  setup.cfg  setup.py  tox.ini  uvcombine.py
.github/workflows/: main.yml  publish.yml
docs/: api.rst  conf.py  feathering_cube.rst  feathering_cubes.rst  feathering_images.rst  index.rst  install.rst
examples/: Compare Linear to UV.ipynb  DeconvolutionTests.ipynb  FeatheringTests.ipynb  ScaleFactors.ipynb  deconvolution_experiments.py  example_uvcombine_casa_feather_comparison.py  test_examples.py
filter/: HFI_planck_100.txt  HFI_planck_143.txt  HFI_planck_217.txt  HFI_planck_353.txt  HFI_planck_545.txt  HFI_planck_857.txt  LFI_planck_30.txt  LFI_planck_44.txt  LFI_planck_70.txt  PACS_blue.fad  PACS_red.fad  README.md  SPIRE_PLW_exd.fad  SPIRE_PMW_exd.fad  SPIRE_PSW_exd.fad  filter.txt
kernels/: README.md
uvcombine/: __init__.py  _astropy_init.py  conftest.py  plot_utilities.py  realspace_combine.py  scale_factor.py  unit_utils.py  utils.py  uvcombine.py
uvcombine/tests/: __init__.py  test_casa.py  test_feather.py  test_scale_factor.py  utils.py
uvcombine/tests/data/: Makefile  make_test_cubes.py
