[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = uvcombine
description = toolkit for fourier-space combination of images with different angular sensitivity
long_description = feathering...
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = radio-astro-tools/uvcombine

[entry_points]
astropy-package-template-example = uvcombine.uvcombine:main
