[metadata]
package_name = uvcombine
description = toolkit for fourier-space combination of images with different angular sensitivity
long_description = feathering...
author = Adam Ginsburg
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://astropy.org/
edit_on_github = False
github_project = radio-astro-tools/uvcombine


[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

