[metadata]
name = uvcombine
description = Toolkit for fourier-space combination of images with different angular resolution.
long_description = feathering...
author = Adam Ginsburg, Eric Koch
author_email = adam.g.ginsburg@gmail.com
license = BSD
url = http://uvcombine.readthedocs.org
edit_on_github = False
github_project = radio-astro-tools/uvcombine

[options]
zip_safe = False
packages = find:
install_requires =
    astropy
    numpy>=1.8.0
    spectral-cube
    radio_beam>=0.3.3
    six
    reproject

[options.extras_require]
test =
    pytest-astropy
    pytest-openfiles
    pytest-cov
    scikit-image
docs =
    sphinx-astropy
    matplotlib
all =
    statsmodels
    matplotlib
    scikit-image

[options.package_data]
uvcombine.tests =
       data/*
       data/*/*


[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[coverage:run]
omit =
  uvcombine/__init__*
  uvcombine/conftest.py
  uvcombine/*setup*
  uvcombine/*/tests/*
  uvcombine/tests/test_*
  uvcombine/extern/*
  uvcombine/utils/compat/*
  uvcombine/version*
  uvcombine/wcs/docstrings*
  uvcombine/_erfa/*
  */uvcombine/__init__*
  */uvcombine/conftest.py
  */uvcombine/*setup*
  */uvcombine/*/tests/*
  */uvcombine/tests/test_*
  */uvcombine/extern/*
  */uvcombine/utils/compat/*
  */uvcombine/version*
  */uvcombine/wcs/docstrings*
  */uvcombine/_erfa/*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
